--- a/Assignement_1.ipynb
+++ b/Assignement_1.ipynb
@@ -6,7 +6,7 @@
       "name": "Assignement-1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOWxvtNdhmbZV8gNqlKV0bV",
+      "authorship_tag": "ABX9TyM4VB9Uu2511lSgdwy/tvO1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,7 +25,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/FrancescoMinchio/NLU_Assignements/blob/main/Assignement_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/FrancescoMinchio/NLU_Assignment_1/blob/main/Assignement_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -34,7 +34,7 @@
         "id": "H7sxfOeByPh1"
       },
       "source": [
-        "#**ASSIGNEMENT_1**\n",
+        "#**ASSIGNMENT_1**\n",
         "\n",
         "\n",
         "- Student name: Francesco Minchio\n",
@@ -131,7 +131,7 @@
         "            spans_dict[(token,token.dep_)]=span_list\n",
         "    return spans_dict"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -204,7 +204,7 @@
         "\n",
         "main()"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
